@@ -1,3 +1,8 @@
+2020-09-15 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_toolbar.c: Replace call to gtk_toolbar_append_element
+      with call to gtk_toolbar_insert_element in geda_toolbar_append_element.
+
 2020-09-14 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_tearoff_menu_item.c: Utilize macro:
